syntax = "proto3";

package proto;


message Detection {
    string id = 1;
    string x_coordinate = 2;
    string y_coordinate = 3;
    string bodyPart = 4;
    string timestamp = 5;
}

message DetectionRequest {
    int64 id = 1;
}

message DetectionResponse {
    Detection detection = 1;
}

service DetectionCRUD {
    rpc Get(DetectionRequest) returns (DetectionResponse);
}